<resources>
    <string name="app_name">印章管家</string>
    <string name="home_page">印章</string>
    <string name="main_home_page">工作台</string>
    <string name="record">记录</string>
    <string name="application">应用</string>
    <string name="mine">我的</string>
    <string name="statistics">统计</string>
    <string name="scan">扫一扫</string>
    <string name="phone">账号</string>
    <string name="phone_et">请输入账号</string>
    <string name="password">密码</string>
    <string name="password_et">请输入密码</string>
    <string name="login_bt">登录</string>
    <string name="more">更多</string>
    <string name="experience">立即体验</string>
    <string name="search">请输入印章名称</string>
    <string name="my_apply">我的申请</string>
    <string name="my_approval">我的审批</string>
    <string name="seal_apply">盖章申请</string>
    <string name="person_Authentication">未个人认证</string>
    <string name="company_Authentication">未企业认证</string>
    <string name="company_name">深圳白鹤区块链科技有限公司版权所有</string>
    <string name="pay_company">深圳白鹤区块链科技有限公司</string>
    <string name="job">研发中心</string>
    <string name="my_data">我的资料</string>
    <string name="my_company">我的公司</string>
    <string name="companyName">公司名称</string>
    <string name="trade">行业</string>
    <string name="my_sign">我的签名</string>
    <string name="my_seal">我的印章</string>
    <string name="my_file">我的文件</string>
    <string name="my_user">我的用户</string>
    <string name="my_power">我的权限</string>
    <string name="organizational">组织架构</string>
    <string name="organizational2">组织架构:</string>
    <string name="identity_authentication">身份认证</string>
    <string name="user_interactive">用户交互</string>
    <string name="login_map">登录地图</string>
    <string name="message">消息</string>
    <string name="set">设置</string>
    <string name="version">当前版本</string>
    <string name="Instructions">使用说明</string>
    <string name="unsubscribe">注销账户</string>
    <string name="Opinion">意见反馈</string>
    <string name="about">关于</string>
    <string name="Scavenging_caching">清除缓存</string>
    <string name="exit_Login">退出登录</string>
    <string name="edit">编辑</string>
    <string name="Head_portrait">头像</string>
    <string name="name">姓名</string>
    <string name="phone_number">手机号</string>
    <string name="change_password">修改密码</string>
    <string name="company">公司</string>
    <string name="department">部门</string>
    <string name="position">职位</string>
    <string name="Position">职位:</string>
    <string name="please_input_position">请输入职位</string>
    <string name="email">邮箱</string>
    <string name="address">地址</string>
    <string name="none_authentication">未认证</string>
    <string name="check_update">检查更新</string>
    <string name="query">查询</string>
    <string name="share">分享</string>
    <string name="share_file">用印申请文件</string>
    <string name="every_stamp_have_evidence">让每次盖章都有据可查</string>
    <string name="download_app">印章管家APP下载地址</string>
    <string name="export_PDF">导出PDF</string>
    <string name="mark_read">标记为已读</string>
    <string name="Approval_for_printing">用印审批</string>
    <string name="Empowerment_of_printing">用印授权</string>
    <string name="start_seal">启动印章</string>
    <string name="Electronic_fence">电子围栏</string>
    <string name="other">其他</string>
    <string name="moulage">印模</string>
    <string name="seal_name">印章名称</string>
    <string name="MAC_address">设备地址</string>
    <string name="seal_Personal">印章所属人</string>
    <string name="state">状态</string>
    <string name="Remainder">申请次数</string>
    <string name="Already_locked">已锁定</string>
    <string name="Failure_time">失效时间</string>
    <string name="deadline">过期时间</string>
    <string name="failure_time">失效时间:</string>
    <string name="service_fee_time">服务费到期时间</string>
    <string name="seal_time">当前盖章次数</string>
    <string name="lock_seal">锁定印章</string>
    <string name="want_seal">启动印章</string>
    <string name="apply_record">申请记录</string>
    <string name="use_seal_apply">用印申请</string>
    <string name="Photograph_upload">拍照上传</string>
    <string name="Seal_assignment">印章分配</string>
    <string name="Geographical_enclosure">地理围栏</string>
    <string name="Approval_flow">审批流</string>
    <string name="approval_record">审批记录</string>
    <string name="Service_charge">服务费</string>
    <string name="start_password">启动密码</string>
    <string name="key_password">按键密码</string>
    <string name="Reset_the_seal">重置印章</string>
    <string name="reset_device">重置印章</string>
    <string name="clear">清除</string>
    <string name="complete">完成</string>
    <string name="sealTime">盖章时间</string>
    <string name="seal_way">盖章方式</string>
    <string name="seal_address">盖章地址</string>
    <string name="seal_people">盖章人</string>
    <string name="Flow_number">流&#160;&#160;水&#160;&#160;号</string>
    <string name="apply_bill">申请单据</string>
    <string name="seal_photo">盖章后拍照</string>
    <string name="see_apply_bill">查看申请单据</string>
    <string name="see_apply_file">查看申请文件</string>
    <string name="upload_photo">上传照片</string>
    <string name="upload_photo_number">上传照片数</string>
    <string name="see_seal_address">查看盖章位置</string>
    <string name="apply_type">申请类型</string>
    <string name="apply_time">申请次数</string>
    <string name="apply_person">申请人</string>
    <string name="Next_step">下一步</string>
    <string name="file_number">文件份数</string>
    <string name="file_type">文件类型</string>
    <string name="Application_reason">申请事由</string>
    <string name="please_input_reason">请输入申请事由（例如:XXX招标合同）</string>
    <string name="seal_information">印章信息</string>
    <string name="operation_seal">操作印章</string>
    <string name="use_seal">用印</string>
    <string name="change_pws">修改启动密码</string>
    <string name="change_crash_pws">修改应急密码</string>
    <string name="reset_pws">重置</string>
    <string name="seal_time_now">已使用次数</string>
    <string name="surplus_use_time">剩余次数</string>
    <string name="use_people">用印人:</string>
    <string name="seal_number">印章编号:</string>
    <string name="mac_address">设备地址:</string>
    <string name="seal_overdue_time">失效时间:</string>
    <string name="Stamp_affair">用印事由:</string>
    <string name="use_seal_position">用印位置:</string>
    <string name="login_address">用印详细地址:</string>
    <string name="register">注册</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="Verification_Code">验证码</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="please_input_Code">请输入验证码</string>
    <string name="get_Code">获取验证码</string>
    <string name="set_password">设置密码</string>
    <string name="please_set_password">请设置密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_confirm_password_again">请再次输入密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm_password_again">请再次确认密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="Please_select_type">请选择类型</string>
    <string name="use_seal_file_name">用章文件名称</string>
    <string name="please_select_seal">请选择印章</string>
    <string name="please_input_time">请输入次数</string>
    <string name="please_fail_time">请选择失效时间</string>
    <string name="please_input_name">请输入名称</string>
    <string name="please_input_file_number">请输入文件份数</string>
    <string name="please_select_file_type">请输入/选择文件类型</string>
    <string name="Copy_to">抄送到</string>
    <string name="please_copy_people">请选择抄送人</string>
    <string name="please_input_seal_name">请输入印章名称</string>
    <string name="please_input_seal_number">请输入印章编号</string>
    <string name="use_Range">使用范围</string>
    <string name="please_input_use_Range">请输入使用范围</string>
    <string name="belong_department">所属部门</string>
    <string name="select_belong_department">请选择所属部门</string>
    <string name="Upload_Impression">上传印模</string>
    <string name="set_map_intercept">设置地理围栏</string>
    <string name="user_name">用户名:</string>
    <string name="input_user_name">请输入用户名</string>
    <string name="phone_Number">手机号码:</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="submit">提交</string>
    <string name="please_select">请选择</string>
    <string name="mail_list">通讯录</string>
    <string name="wait_approval">待审批</string>
    <string name="approval_people">审批人</string>
    <string name="copy_people">抄送人</string>
    <string name="approval_type">审批类型</string>
    <string name="approval_level">审批等级</string>
    <string name="approvaling">审批中</string>
    <string name="complete_approval">已审批</string>
    <string name="reject">已驳回</string>
    <string name="recommend_seal">推荐印章管家</string>
    <string name="server_address">服务器地址</string>
    <string name="nearby_device">附近设备</string>
    <string name="my_QRCode">我的二维码</string>
    <string name="my_Card_ticket">我的卡券</string>
    <string name="my_order">我的订单</string>
    <string name="daily_office">日常办公</string>
    <string name="seal_manage">印章管理</string>
    <string name="press_time">长按时间</string>
    <string name="cost_manage">费用管理</string>
    <string name="resources_manage">资源管理</string>
    <string name="service_cost_reset">服务费充值</string>
    <string name="order">充值记录</string>
    <string name="connect_device_now">当前连接设备</string>
    <string name="search_seal">搜索到的印章</string>
    <string name="not_connect_seal">暂未连接印章</string>
    <string name="bluetooth">蓝牙</string>
    <string name="copyright">版权所有</string>
    <string name="seal_device">附近设备</string>
    <string name="connect_seal">连接印章</string>
    <string name="residual_electricity">剩余电量</string>
    <string name="start_time">启动次数</string>
    <string name="finish_time">已盖次数</string>
    <string name="feedback_type">反馈类型</string>
    <string name="function_suggestion">功能建议</string>
    <string name="use_question">使用问题</string>
    <string name="content">内容相关</string>
    <string name="feedback_content">反馈内容</string>
    <string name="hint">请写下你遇到的问题,200以内</string>
    <string name="contact_way">联系方式</string>
    <string name="please_write_phone">请写下你的联系方式便于联系</string>
    <string name="look_file">查看附件</string>
    <string name="sign">签名</string>
    <string name="please_sign">请签名</string>
    <string name="wait_me_agree">待我审批</string>
    <string name="apply_notify">审批通知</string>
    <string name="alarm_message">告警消息</string>
    <string name="system_message">系统消息</string>
    <string name="go_approval">去审批</string>
    <string name="add_person">添加人员</string>
    <string name="add_seal">添加印章</string>
    <string name="old_psd">旧密码:</string>
    <string name="please_input_old_psd">请输入旧密码</string>
    <string name="new_psd">新密码:</string>
    <string name="please_input_new_psd">请输入新密码</string>
    <string name="confirm_psd">确认密码:</string>
    <string name="please_confirm_psd">请确认密码</string>
    <string name="processing_result">处理结果</string>
    <string name="suggestion">意见</string>
    <string name="please_input_suggestion">请输入意见</string>
    <string name="sure">确定</string>
    <string name="seal">印章</string>
    <string name="password_user">密码用户</string>
    <string name="see_seal_information">查看印章信息</string>
    <string name="edit_seal">编辑印章</string>
    <string name="delete_seal">删除印章</string>
    <string name="see_user_information">查看用户信息</string>
    <string name="add_user">添加用户</string>
    <string name="edit_user">编辑用户</string>
    <string name="set_power">设置权限</string>
    <string name="delete_user">删除用户</string>
    <string name="select_same_person_seal">查询同部门人员盖章</string>
    <string name="fifter_code">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="person">人员</string>
    <string name="nearest">最近时间</string>
    <string name="begin_time">开始时间</string>
    <string name="over_time">结束时间</string>
    <string name="select">查询</string>
    <string name="pay_amountOfMoney">支付金额</string>
    <string name="get_money">收款方</string>
    <string name="sure_pay">确认支付</string>
    <string name="see_record_file">查看记录文件</string>
    <string name="seeSeal_file">查看盖章文件</string>
</resources>