<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".activity.SelectSealRecodeActivity">

    <include layout="@layout/head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout style="@style/pressed_effect">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:text="@string/person"
                android:textColor="@color/black" />

            <ImageView style="@style/right_arrow" />
        </RelativeLayout>

        <View style="@style/line_left" />

        <RelativeLayout style="@style/pressed_effect">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:text="@string/seal"
                android:textColor="@color/black" />

            <ImageView style="@style/right_arrow" />
        </RelativeLayout>

        <View style="@style/line_left" />

        <RelativeLayout style="@style/pressed_effect">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:text="@string/nearest"
                android:textColor="@color/black" />

            <ImageView style="@style/right_arrow" />
        </RelativeLayout>

        <View style="@style/line_left" />

        <RelativeLayout style="@style/pressed_effect">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:text="@string/begin_time"
                android:textColor="@color/black" />

            <ImageView style="@style/right_arrow" />
        </RelativeLayout>

        <View style="@style/line_left" />

        <RelativeLayout style="@style/pressed_effect">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:text="@string/over_time"
                android:textColor="@color/black" />

            <ImageView style="@style/right_arrow" />
        </RelativeLayout>

        <View style="@style/line" />

    </LinearLayout>

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/login_circle_bg"
        android:text="@string/select"
        android:textColor="@color/white" />
</LinearLayout>