<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/see_apply_file_tv"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/see_apply_file" />

        <View style="@style/line" />

        <TextView
            android:id="@+id/see_seal_file_tv"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/seeSeal_file" />

        <View style="@style/line" />

        <TextView
            android:id="@+id/see_record_file_tv"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/see_record_file" />
    </LinearLayout>
</LinearLayout>
