<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SurePayActivity"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/head"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_amountOfMoney"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/money_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/red"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_money"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"/>

        <View
            android:layout_width="0.5dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:background="@color/line"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/sure_pay_bt"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:background="@drawable/login_circle_bg"
        android:text="@string/sure_pay"/>
</LinearLayout>